# AI-CHATBOT

./: .env  Langchain.ipynb  env  gitignore  main.py  package-lock.json  pyproject.toml  requirements.txt
src/: chain.py  prompt.py  utils.py  vector_store.py
